<resources>

    <string name="app_name">Datovka</string>
    <string name="menu_settings">Nastavení</string>
    <string name="menu_accounts">Účty</string>
    <string name="menu_lock_app">Uzamknout</string>
    <string name="title_activity_main">Datovka</string>
    <string name="title_activity_accounts">Účty</string>
    <string name="title_activity_account_info">Informace o účtu</string>
    <string name="sender">Odesilatel:</string>
    <string name="recipient">Příjemce:</string>
    <string name="add_acount">Přidat účet</string>
    <string name="username">Uživatelské jméno</string>
    <string name="password">Heslo</string>
    <string name="add_account_button">Přidat účet</string>
    <string name="storno">Storno</string>
    <string name="ok">OK</string>
    <string name="account_created">Účet vytvořen</string>
    <string name="account_exists">Účet již existuje</string>
    <string name="account_create_error">Chyba při vytváření účtu</string>
    <string name="account_create_bad_login">Chybné přihlašovací informace</string>
    <string name="account_create_progress">Nastavuji nový účet</string>
    <string name="test_environment_checkbox">Testovací účet?</string>
    <string name="download_attachment_button">Stáhnout přílohy</string>
    <string name="download_attachment_progress">Stahuji zprávy</string>
    <string name="no_default_application">Nenalezena žádná aplikace podporujicí tento formát souboru! (%1$s)</string>
    <string name="signed_message_name">Podepsaná zpráva</string>
    <string name="account_menu_info">Detailní informace</string>
    <string name="account_menu_delete">Smazat</string>
    <string name="account_deleted">Účet smazán</string>
    <string name="inbox">Přijaté</string>
    <string name="outbox">Odeslané</string>
    <string name="refresh_menu_btn">Obnovit</string>
    <string name="no_new_messages">Nemáte žádné nové zprávy</string>
    <string name="new_messages_with_count">Máte %1$d nových zpráv a %2$d aktualizací stavů příchozích zpráv.</string>
    <string name="empty_inbox_message">Nemáte žádné příchozí zprávy.</string>
    <string name="empty_account_list">Nemáte nastavené žádné účty. Nový účet nastavíte klepnutím na ikonu v pravém horním rohu.</string>
    <string name="empty_outbox_message">Nemáte žádné odchozí zprávy.</string>
    <string name="message_status">Stav zprávy:</string>
    <string name="ID">ID: %1$s</string>
    <string name="size_of_attachments">Velikost přílohy: %1$d kB</string>
    <string name="acceptance_date">Datum přijetí: %1$s</string>
    <string name="delivery_date">Datum doručení: %1$s</string>
    <string name="msgbox_type">Typ schránky</string>
    <string name="owner_address">Adresa vlastníka účtu</string>
    <string name="passwd_expir_date">Expirace hesla</string>
    <string name="remove_account_button">Odstranit účet</string>
    <string name="refresh_message_menu_btn">Obnovit zprávu</string>
    <string name="message_not_accepted_yet">Zpráva dosud nebyla přijata.</string>
    <string name="not_set">Není nastaveno.</string>
    <string name="no_connection">Zařízení není připojeno k internetu.</string>
    <string name="empty_attachments_list">Pro tuto zprávu ještě nebyly staženy přílohy. Jejich stažení provedete stisknutím tlačítka s ikonou sponky.</string>
    <string name="storage_not_available">Úložiště není dostupné.</string>
    <string name="storage_low_space">Na úložišti není dostatek volného místa.</string>
    <string name="download_crashed">Stahování nebylo dokončeno.</string>
    <string name="change_passwd_account_button">Změnit heslo</string>
    <string name="sender_details">Detaily odesilatele:</string>
    <string name="recipient_details">Detaily příjemce:</string>
    <string name="message_details">Detaily zprávy:</string>
    <string name="to_hands">K rukám: %1$s</string>
    <string name="personal_delivery">Do vlastních rukou: %1$s</string>
    <string name="subst_delivery">Povoleno doručení fikcí: %1$s</string>
    <string name="legal_title">Zmocnění: %1$s</string>
    <string name="doc_ref_num">Číslo jednací: %1$s</string>
    <string name="doc_ident">Spisová značka: %1$s</string>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>
    <string name="change_login_credentials">Změnit přihlašovací údaje</string>
    <string name="new_password">Nové heslo</string>
    <string name="passwd_change_success">Heslo bylo úspěšně změněno.</string>
    <string name="passwd_change_fail">Chyba: Heslo nebylo změněno.</string>
    <string name="cannot_login">Není možné se přihlásit k účtu ID: %1$s.</string>
    <string name="error">Chyba</string>
    <string name="status_changed">Stav zprávy byl aktualizován</string>
    <string name="status_not_changed">Stav zprávy nezměněn</string>
    <string name="message_with_id_not_found">Zpráva (ID: %1$s) nebyla nalezena.</string>
    <string name="delete_account_warning">Opravdu chcete tento účet smazat?</string>
    <string name="delete_account_btn">Smazat</string>
    <string name="cert_error">Chyba certifikátu!</string>
    <string name="add_account_databox_creating">Vytváření schránky</string>
    <string name="add_account_inbox_downloading">Stahování příchozích zpráv</string>
    <string name="add_account_outbox_downloading">Stahování odchozích zpráv</string>
    <string name="message_not_found">Zpráva nebyla nalezena</string>
    <string name="stream_interrupted">Spojení bylo přerušeno</string>
    <string name="title_activity_prefs">Nastavení</string>
    <string name="settings_group_security">Bezpečnost</string>
    <string name="set_pin_code">Nastavit PIN kód</string>
    <string name="use_pin_code">Používat PIN kód</string>
    <string name="use_pin_code_summary">PIN kód je nutné zadat při každém spuštění aplikace.</string>
    <string name="new_pin_code">Nový PIN kód</string>
    <string name="new_pin_code_again">Nový PIN kód (znovu)</string>
    <string name="old_pin_code">Současný PIN kód</string>
    <string name="pin_code">PIN kód</string>
    <string name="enter_new_pin_code">Zadejte nový PIN kód</string>
    <string name="enter_pin_code">Zadejte PIN kód</string>
    <string name="wrong_pin_code">Špatný PIN kód</string>
    <string name="new_pin_code_not_equal">Nový PIN kód není zadán 2x totožně</string>
    <string name="short_pin_code">PIN kód je příliš krátký (použijte alespoň 3 čísla)</string>
    <string name="msgbox_id_not_known">Neznámé ID schránky</string>
    <string name="no_map_application">Nenalezena žádná mapová aplikace</string>
    <string name="overflow_menu_name">Více</string>
    <string name="all_message_boxes">Všechny schránky</string>
    <string name="only_this_message_box">Pouze tuto schránku</string>
    
    <string name="message_status_1">Zpráva byla podána.</string>
    <string name="message_status_2">Podepsáno časovým razítkem.</string>
    <string name="message_status_3">Zavirovaná zpráva.</string>
    <string name="message_status_4">Zpráva dodána.</string>
    <string name="message_status_5">Zpráva byla doručena fikci.</string>
    <string name="message_status_6">Zpráva byla doručena.</string>
    <string name="message_status_7">Zpráva byla přečtena.</string>
    <string name="message_status_8">Zpráva je nedoručitelná, schránka již neexistuje.</string>
    <string name="message_status_9">Zpráva smazána, obálka přesunuta do archivu.</string>
    <string name="message_status_10">Zpráva je v dlouhodobém uložišti.</string>
    <string name="message_status_unknown">Stav zprávy je neznámý.</string>
    
    
	<string-array name="folder_spinner">
	    <item>Přijaté</item>
	    <item>Odeslané</item>
	</string-array>
	
</resources>